spacing fix

--- a/css/main.css
+++ b/css/main.css
@@ -53,3 +53,7 @@ ul.posts li {
 .readonly-box {
     background-color:rgb(168, 168, 168);
 }
+
+tr.spaceUnder>td {
+    padding-bottom: 1em;
+}
